guides/recipes/gateway/gke-internal-lb-gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway
  labels:
    app.kubernetes.io/component: gateway
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
